# hydrus-ptr-client

./: Cargo.toml  README.md
src/: client.rs  client_builder.rs  constants.rs  error.rs  lib.rs
src/client/: client_core.rs  mod.rs  update_stream.rs
src/endpoints/: metadata.rs  mod.rs  options.rs  update.rs
src/hydrus_serializable/: content_update.rs  definitions_update.rs  dictionary.rs  metadata.rs  mod.rs  tag_filter.rs  wrapper.rs
tests/: common.rs  endpoints.rs
