[package]
name = "hydrus-ptr-client"
description = "A http client for the hydrus ptr"
authors = ["trivernis"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Trivernis/hydrus-ptr-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.31"
thiserror = "1.0.30"
serde_json = "1.0.79"
flate2 = "1.0.22"
reqwest = "0.11.9"
futures-core = "0.3.21"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dev-dependencies]
tracing-subscriber = "0.3.9"
dotenv = "0.15.0"
lazy_static = "1.4.0"
futures-util = "0.3.21"

[dev-dependencies.tokio]
version = "1.17.0"
features = ["rt-multi-thread", "macros"]

[features]
rustls = ["reqwest/rustls"]